hphp/hack/test/typecheck/coeffects/poly_var_reassign/using.php
<?hh

class X implements IDisposable {
  public function __dispose()[]: void {}
}

function using_expr(vec<int> $v)[$v::C]: void {
  using ($v = new X()) {}
}
